--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,16 @@ body {
   overflow-y: scroll;
 }
 
+th{
+  min-width: 120px;
+  text-align: justify;
+}
+
+td{
+  min-width: 120px;
+  text-align: center;
+}
+
 .header {
   margin-bottom: 3rem;
   display: flex;
@@ -189,4 +199,9 @@ th {
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.slave{
+  color: red;
+  font-weight: 800;
 }
