--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
   width: 90%;
   height: 40vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   background-color: #5f5f5f;
